--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span>Bulbasaur</span> 
             <span>#001</span>
         </div>
-        <img src="/src/imagens/bulbasaur.gif" alt="bulbasaur" classe="gif">
+        <img src="./src/imagens/bulbasaur.gif" alt="bulbasaur" classe="gif">
 
         <ul class="tipos">
             <li class="tipo grama">Grama</li>
@@ -44,7 +44,7 @@
             <span>Ivysaur</span> 
             <span>#002</span>
         </div>
-        <img src="/src/imagens/ivysaur.gif" alt="ivysaur" classe="gif">
+        <img src="./src/imagens/ivysaur.gif" alt="ivysaur" classe="gif">
 
         <ul class="tipos">
             <li class="tipo grama">Grama</li>
@@ -60,7 +60,7 @@
             <span>Venusaur</span> 
             <span>#003</span>
         </div>
-        <img src="/src/imagens/venusaur.gif" alt="venusaur" classe="gif">
+        <img src="./src/imagens/venusaur.gif" alt="venusaur" classe="gif">
 
         <ul class="tipos">
             <li class="tipo grama">Grama</li>
@@ -78,7 +78,7 @@
             <span>Charmander</span> 
             <span>#004</span>
         </div>
-        <img src="/src/imagens/charmander.gif" alt="charmander" classe="gif">
+        <img src="./src/imagens/charmander.gif" alt="charmander" classe="gif">
 
         <ul class="tipos">
             <li class="tipo fogo">Fogo</li>
@@ -92,7 +92,7 @@
             <span>chameleon</span> 
             <span>#005</span>
         </div>
-        <img src="/src/imagens/charmeleon.gif" alt="charmeleon" classe="gif">
+        <img src="./src/imagens/charmeleon.gif" alt="charmeleon" classe="gif">
 
         <ul class="tipos">
             <li class="tipo fogo">Fogo</li>
@@ -108,7 +108,7 @@
             <span>charizard</span> 
             <span>#006</span>
         </div>
-        <img src="/src/imagens/charizard.gif" alt="charizard" classe="gif">
+        <img src="./src/imagens/charizard.gif" alt="charizard" classe="gif">
 
         <ul class="tipos">
             <li class="tipo fogo">Fogo</li>
@@ -124,7 +124,7 @@
             <span>squirtler</span> 
             <span>#007</span>
         </div>
-        <img src="/src/imagens/squirtle.gif" alt="squirtler" classe="gif">
+        <img src="./src/imagens/squirtle.gif" alt="squirtler" classe="gif">
 
         <ul class="tipos">
             <li class="tipo agua">Agua</li>
@@ -140,7 +140,7 @@
             <span>wartortle</span> 
             <span>#008</span>
         </div>
-        <img src="/src/imagens/wartortle.gif" alt="wartortle" classe="gif">
+        <img src="./src/imagens/wartortle.gif" alt="wartortle" classe="gif">
 
         <ul class="tipos">
             <li class="tipo agua">Agua</li>
@@ -156,7 +156,7 @@
             <span>blastoise</span> 
             <span>#008</span>
         </div>
-        <img src="/src/imagens/blastoise.gif" alt="blastoise" classe="gif">
+        <img src="./src/imagens/blastoise.gif" alt="blastoise" classe="gif">
 
         <ul class="tipos">
             <li class="tipo agua">Agua</li>
@@ -172,7 +172,7 @@
             <span>caterpie</span> 
             <span>#008</span>
         </div>
-        <img src="/src/imagens/caterpie.gif" alt="caterpie" classe="gif">
+        <img src="./src/imagens/caterpie.gif" alt="caterpie" classe="gif">
 
         <ul class="tipos">
             <li class="tipo inseto">Inseto</li>
